--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link href="styles.css" rel="stylesheet">
   <title>Game Time</title>
 </head>
 <body>
-
+  <canvas id="game" class="game-canvas" width="650" height="595"></canvas>
   <script src="main.bundle.js"></script>
 </body>
 </html>
