--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <canvas id="game" class="game-canvas" width="650" height="595"></canvas>
+  <canvas id="gamepiece" class="gamepiece" width="650" height="595"></canvas>
   <script src="main.bundle.js"></script>
 </body>
 </html>
