haven't committed in a while

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 <body>
   <canvas id="game" class="game-canvas" width="650" height="595"></canvas>
   <canvas id="gamepiece" class="gamepiece" width="650" height="595"></canvas>
+  <div class="home-screen">
+    <p>Player One = Black | Player Two = Red</p>
+    <p>Move Token Using Left And Right Arrow Keys</p>
+    <p>Press Enter To Drop Token</p>
+    <p>Click Here To Start</p>
+  </div>
   <script src="main.bundle.js"></script>
 </body>
 </html>
