diagonal winner function is winning

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Game Time</title>
 </head>
 <body>
+  <h1 id="winner"></h1>
   <canvas id="game" class="game-canvas" width="650" height="595"></canvas>
-  <canvas id="gamepiece" class="gamepiece" width="650" height="595"></canvas>
   <div class="home-screen">
     <p>Player One = Black | Player Two = Red</p>
     <p>Move Token Using Left And Right Arrow Keys</p>
